Version 1.1.0

    Fixed the script loading to use UTF-8 encoding (Yasuhiro Matsumoto).

    Added check for system proxy setting (Yasuhiro Matsumoto).

    Fixed building with Cygwin and Qt 4.5 (John Dalton).

    Added a new example: driver for QUnit tests (Łukasz Korecki).

    Fixed issue #20: problem with JPG transparent color (Alessandro Portale).

    Fixed issue #9: ignore first line starting with #! (Matthias, aka fourplusone).

    Fixed issue #7: support for file upload for form submission (Matthias, aka fourplusone).

    Fixed issue #35: support for disabling images loading (Ariya Hidayat).

    Fixed issue #14: enable or disable plugins (Ariya Hidayat).

    Added a new example: using Canvas to produce the color wheel (Ariya Hidayat).

    Added support for rasterizing as GIF image (Ariya Hidayat).

    Added support for CoffeeScript (Ariya Hidayat).

2011-01-17: Version 1.0.0

    Initial launch.

    The API is centralized at the 'phantom' object (as child of
    window object) which has the properties: args, content,
    loadStatus, state, userAgent, version, viewportSize, and
    the following functions: exit, open, render, sleep.

    Several examples are included, among others: web page rasterizer,
    weather service, headless test framework driver, and many others.