@@ -24,6 +24,8 @@ Version 1.1.0
 
     Added support for CoffeeScript (Ariya Hidayat).
 
+    Fixed issue #19: option for setting the proxy (Clint Berry, Ariya Hidayat).
+
 2011-01-17: Version 1.0.0
 
     Initial launch.
